--- a/Project_SmartFarm.ioc
+++ b/Project_SmartFarm.ioc
@@ -46,23 +46,27 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PB8
-Mcu.Pin13=PB9
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin10=PC5
+Mcu.Pin11=PB0
+Mcu.Pin12=PC6
+Mcu.Pin13=PC8
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin2=PC0
+Mcu.Pin20=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PC1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PC4
-Mcu.Pin9=PC5
-Mcu.PinsNb=18
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PC4
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -83,6 +87,8 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM3_IRQn=true\:14\:0\:true\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA1.Locked=true
+PA1.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -100,6 +106,10 @@ PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=WaterLevel
 PA6.Locked=true
 PA6.Signal=ADCx_IN6
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LED-B
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
@@ -107,9 +117,11 @@ PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=LED
+PC0.GPIO_Label=LED-R
 PC0.Locked=true
 PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=LED-G
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC4.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -121,6 +133,14 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=Photo
 PC5.Locked=true
 PC5.Signal=ADCx_IN15
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=Pump
+PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=Pump2
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
@@ -146,8 +166,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=ProjectSmartFarm.ioc
-ProjectManager.ProjectName=ProjectSmartFarm
+ProjectManager.ProjectFileName=Project_SmartFarm.ioc
+ProjectManager.ProjectName=Project_SmartFarm
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -205,7 +225,7 @@ TIM2.IPParameters=Channel-PWM Generation1 CH1,Period,Prescaler
 TIM2.Period=65535
 TIM2.Prescaler=0
 TIM3.IPParameters=Period,Prescaler
-TIM3.Period=20000-1
+TIM3.Period=10000-1
 TIM3.Prescaler=10000-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
